--- a/includes/layouts/default.njk
+++ b/includes/layouts/default.njk
@@ -6,21 +6,22 @@
   <meta name="generator" content="11ty v{{ pkg.devDependencies['@11ty/eleventy'] | replace('^','') }}"/>
   <meta name="description" content="{{ description or page.description or pkg.description }}"/>
   <meta name="hostname" content="{{ pkg.hostname }}"/>
+  <meta name="keywords" content="{{ pkg.keywords }}"/>
 
-  {%- block metaogp -%}
+{%- block metaogp -%}
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="{{ pkg.title }}"/>
   <meta property="og:title" content="{{ title or page.title or pkg.title }}"/>
   <meta property="og:description" content="{{ description or pkg.description }}"/>
   <meta property="og:url" content="{{ url or pkg.homepage }}"/>
   <meta property="og:image" content=""/>
-  {%- endblock %}
+{%- endblock %}
 
   <meta property="og:locale" content="en_US"/>
   <meta property="og:locale:alternate" content="pt_BR"/>
   <meta property="og:locale:alternate" content="pt_PT"/>
 
-{% for style in pkg.styles %}
+{%- for style in pkg.links.styles %}
   <link rel="stylesheet" type="text/css" href="{{ style | url }}"/>
 {% endfor %}
   <title>{{ pkg.title }}{% if title %} - {{ title }}{% endif %}</title>
