--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -10,8 +10,9 @@ body {
   align-content: center;
   justify-items: stretch;
   align-items: stretch;
-  margin: 0;
-  padding: 0 0.25rem;
+  width: var(--page-width);
+  margin: 0 auto;
+  padding: 0 var(--grid-gap);
 }
 
 body > header {
@@ -24,7 +25,36 @@ body > main {
 }
 
 body > aside {
+  --padding-h: 2.00rem;
+  --padding-v: 0.50rem;
+
   grid-area: sidebar;
+  display: flex;
+  height: calc(100% - var(--padding-h) * 2);
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: var(--padding-h);
+  padding-bottom: var(--padding-h);
+  text-align: justify;
+}
+
+aside > footer {
+  font-size: 0.75rem;
+}
+
+aside figure img[src="/assets/images/brand.svg"] {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+}
+
+aside figure figcaption {
+  text-align: center;
+}
+
+aside > footer > p {
+  margin: 0;
+  text-align: center;
 }
 
 body > footer {
@@ -62,63 +92,11 @@ body > header > nav > ul li a {
   padding: 0.25rem 0.75rem;
 }
 
-article > header {
-  margin: 0 0 1.00rem 0;
+h2 {
   border-bottom: 1px solid rgba(0, 0, 0, 0.50);
 }
 
-article > h1 {
-  -webkit-column-span: all; 
-  column-span: all; 
-}
-
-article > main {
-  padding: 0.25rem 0;
-
-  text-align: justify;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-
-  /* -webkit-column-width: calc(var(--article-column-width) - 1rem); */
-  /* -moz-column-width: calc(var(--article-column-width) - 1rem); */
-  /* -ms-column-width: calc(var(--article-column-width) - 1rem); */
-  /* column-width: calc(var(--article-column-width) - 1rem); */
-  /* -webkit-column-count: var(--article-column-count); */
-  /* -moz-column-count: var(--article-column-count); */
-  /* -ms-column-count: var(--article-column-count); */
-  /* column-count: var(--article-column-count); */
-  /* -webkit-column-rule: 1px solid rgba(0, 0, 0, 0.50); */
-  /* -moz-column-rule: 1px solid rgba(0, 0, 0, 0.50); */
-  /* -ms-column-rule: 1px solid rgba(0, 0, 0, 0.50); */
-  /* column-rule: 1px solid rgba(0, 0, 0, 0.50); */
-  /* -webkit-column-fill: auto; */
-  /* -moz-column-fill: auto; */
-  /* -ms-column-fill: auto; */
-  /* column-fill: auto; */
-}
-
-p {
-  margin: 0;
-}
-
-article:first-child:last-child main img:first-child {
-  float: left;
-  margin-right: 0.25rem;
-}
-
-article main p:not(:nth-child(2)) {
-  margin: 0.25rem 0;
-}
-
-article main p:nth-child(2):first-letter {
-  padding: 0 0.20rem 0.40rem 0;
-  margin: 0.40rem 0.20rem 0 0;
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: bold;
-  float: left;
-  border-right: 1px solid rgba(0, 0, 0, 0.50);
+dl > dt {
+  margin-top: 1.00rem;
+  margin-bottom: 0.25rem;
 }
