Link to main page

--- a/includes/layouts/default.njk
+++ b/includes/layouts/default.njk
@@ -34,7 +34,7 @@
   <aside>
     <main>
       <figure>
-        <img src="/assets/images/brand.svg"/>
+        <a href="{{ '/' | url }}"><img src="/assets/images/brand.svg"/></a>
         <figcaption>{{ pkg.title }}</figcaption>
       </figure>
 
