--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -99,3 +99,46 @@ dl > dt {
   margin-top: 1.00rem;
   margin-bottom: 0.25rem;
 }
+
+address ul {
+  display: inline-block;
+  float: right;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+address ul li {
+  display: inline-block;
+}
+
+address ul li[data-url-tag] {
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  text-align: center;
+  margin: 0;
+  background-color: rgba(113, 66, 20, 0.10);
+}
+
+address ul li[data-url-tag] a {
+  display: inline-block;
+  min-width: 6rem;
+  padding: 0.25rem 0.50rem;
+  color: rgba(0, 0, 0, 0.80);
+  font-style: normal;
+  font-size: 0.80rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+address ul li[data-url-tag]:first-child {
+  border-radius: 2px 0 0 2px;
+}
+
+address ul li[data-url-tag]:last-child {
+  border-radius: 0 2px 2px 0;
+}
+
+.hljs {
+  border-radius: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+}
