--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import "settings.css" screen;
 
 body {
@@ -10,9 +11,11 @@ body {
   align-content: center;
   justify-items: stretch;
   align-items: stretch;
-  width: var(--page-width);
   margin: 0 auto;
-  padding: 0 var(--grid-gap);
+  font-family: 'Playfair Display', serif;
+  font-size: 1.00rem;
+  color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(113, 66, 20, 0.10);
 }
 
 body > header {
@@ -24,9 +27,16 @@ body > main {
   height: auto;
 }
 
+body > main p {
+  line-height: 1.75rem;
+}
+
+body > main pre {
+  font-size: 0.80rem;
+}
+
 body > aside {
   --padding-h: 2.00rem;
-  --padding-v: 0.50rem;
 
   grid-area: sidebar;
   display: flex;
@@ -92,11 +102,58 @@ body > header > nav > ul li a {
   padding: 0.25rem 0.75rem;
 }
 
+h1 {
+  border-bottom: 2px solid rgba(113, 66, 20, 0.50);
+}
+
 h2 {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.50);
+  border-bottom: 1px solid rgba(113, 66, 20, 0.10);
 }
 
 dl > dt {
   margin-top: 1.00rem;
   margin-bottom: 0.25rem;
+}
+
+address ul {
+  display: inline-block;
+  float: right;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+address ul li {
+  display: inline-block;
+}
+
+address ul li[data-url-tag] {
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  text-align: center;
+  margin: 0;
+  background-color: rgba(113, 66, 20, 0.10);
+}
+
+address ul li[data-url-tag] a {
+  display: inline-block;
+  min-width: 6rem;
+  padding: 0.25rem 0.50rem;
+  color: rgba(0, 0, 0, 0.80);
+  font-style: normal;
+  font-size: 0.80rem;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+address ul li[data-url-tag]:first-child {
+  border-radius: 2px 0 0 2px;
+}
+
+address ul li[data-url-tag]:last-child {
+  border-radius: 0 2px 2px 0;
+}
+
+.hljs {
+  border-radius: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.25);
 }
