--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -67,6 +67,15 @@ aside > footer > p {
   text-align: center;
 }
 
+aside a {
+  color: rgba(113, 66, 20, 0.90);
+  text-decoration: none;
+}
+
+aside a:hover {
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.90);
+}
+
 body > footer {
   grid-area: footer;
 }
@@ -134,6 +143,11 @@ address ul li[data-url-tag] {
   background-color: rgba(113, 66, 20, 0.10);
 }
 
+address ul li[data-url-tag]:hover {
+  background-color: rgba(113, 66, 20, 0.20);
+  transition: background-color 0.50s;
+}
+
 address ul li[data-url-tag] a {
   display: inline-block;
   min-width: 6rem;
@@ -143,6 +157,10 @@ address ul li[data-url-tag] a {
   font-size: 0.80rem;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+address ul li[data-url-tag]:not(:first-child) {
+  border-left: none;
 }
 
 address ul li[data-url-tag]:first-child {
