--- a/includes/layouts/default.njk
+++ b/includes/layouts/default.njk
@@ -42,9 +42,7 @@
     </main>
 
     <footer>
-      {%- markdown %}
-      {%- include "partials/about.md" %}
-      {%- endmarkdown %}
+    {%- include "partials/about.njk" %}
     </footer>
   </aside>
 
